.ops/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-queue-service
  namespace: gons
spec:
  replicas: 1
  selector:
    matchLabels:
      run: go-queue-service
  template:
    metadata:
      labels:
        run: go-queue-service
    spec:
      containers:
      - name: go-queue-service
        image: local/goqueueservice:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
