.ops/k8s/go-queue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-queue-app
  namespace: go-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      run: go-queue-app
  template:
    metadata:
      labels:
        run: go-queue-app
    spec:
      containers:
      - name: go-queue
        image: go-queue
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-queue-app
  namespace: go-ns
  labels:
    run: go-queue-app
spec:
  type: ClusterIP
  selector:
    run: go-queue-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
