.ops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-queue-service-svc
  namespace: gons
  labels:
    run: go-queue-service
spec:
  type: ClusterIP
  selector:
    run: go-queue-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
