.ops/k8s/go-queue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-queue-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: go-queue-service-tls
      hosts:
        - go-queue-service.local
  rules:
    - host: go-queue-service.local
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: go-queue-service
                port:
                  number: 8080
          - path: /rmq
            pathType: ImplementationSpecific
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
