.ops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  namespace: gons
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  tls:
  - hosts:
    - go-queue-service.local
    secretName: go-queue-service-secret-tls
  rules:
  - host: go-queue-service.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-queue-service-svc
            port:
              number: 8080
      - path: /rabbitmq/
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
